Fix spacing for UPI subtext on contact_optional.

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -1710,6 +1710,7 @@ $outline = #ddd;
         font-size: 32px;
         margin: 2px 16px;
         line-height: 30px;
+        min-width: 27px;
       }
       &+.item {
         border-top: 1px solid $bc;
